--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="buscador">
       <label for="[object Object]">
         <input type="text" placeholder="Buscar">
-        <button type="submit" class="boton"><img src="./Imagenes/lupa.jpg"/></button>
+        <button type="submit" ><img src="./Imagenes/lupa.jpg"/></button>
       </label>
     </section>
 
@@ -145,5 +145,16 @@
         </article>
       </section>
     </section>
+    <footer>
+      <div>
+        <h3 class="Numeropag">Pagina de 1 al 25</h3>
+      </div>
+      <a class="button boton" href="#index.html">1</a>
+      <a class="button boton" href="#index.html">2</a>
+      <a class="button boton" href="#index.html">3</a>
+      <a class="button boton" href="#index.html">4</a>
+      <a class="button boton" href="#index.html">Siguiente >></a>
+      <a class="button boton" href="#index.html">Ultima pagina</a>
+    </footer>
   </body>
 </html>
